<resources>
    <string name="app_name">courses_test</string>
    <string name="text_auth">Вход</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="text_email">Email</string>
    <string name="text_password">Пароль</string>
    <string name="hint_enter_password">Введите пароль</string>
    <string name="text_register">Регистрация</string>
    <string name="text_no_acc">Нет аккаунта?</string>
    <string name="text_forgot_password">Забыл пароль</string>
    <string name="text_account">Аккаунт</string>
    <string name="text_favourites">Избранное</string>
    <string name="text_main">Главная</string>
    <string name="text_search_courses">Search courses…</string>
    <string name="text_sort_button">По дате добавления</string>
    <string name="filler_course_title">Java-разработчик с нуля</string>
    <string name="filler_course_description">Освойте backend-разработку и программирование на Java, фреймворки Spring и Maven, работу с базами данных и API. Создайте свой собственный проект, собрав портфолио и став востребованным специалистом для любой IT компании.</string>
    <string name="text_more">Подробнее</string>
    <string name="filler_rate">4.9</string>
    <string name="filler_date">22 Мая 2024</string>
</resources>