<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_course"
    android:layout_marginBottom="@dimen/margin_items_rv"
    app:cardBackgroundColor="@color/dark_gray"
    app:cardCornerRadius="@dimen/radius_item_course"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/courseImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_course_image"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/filler_course"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/CourseImageStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favouritesButton"
            android:layout_width="@dimen/dimen_favourites_button"
            android:layout_height="@dimen/dimen_favourites_button"
            android:layout_margin="@dimen/margin_fav_button_small"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="@color/glass"
            app:cornerRadius="@dimen/radius_standard"
            app:icon="@drawable/icon_favourites"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rateTextView"
            style="@style/FilledGlassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/icon_star_filled"
            android:drawablePadding="@dimen/padding_filledtv_icon"
            app:layout_constraintBottom_toBottomOf="@id/courseImage"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/filler_rate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateTextView"
            style="@style/FilledGlassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/rateTextView"
            app:layout_constraintTop_toTopOf="@id/rateTextView"
            tools:text="@string/filler_date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/courseTitleTextView"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="@dimen/padding_course_item_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/courseImage"
            tools:text="@string/filler_course_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/courseDescriptionTextView"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/padding_course_item_content"
            android:textColor="@color/semi_white"
            app:layout_constraintTop_toBottomOf="@id/courseImage"
            tools:text="@string/filler_course_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/coursePriceTextView"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="@dimen/padding_course_item_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="100 $" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:padding="12dp"
            android:text="@string/text_more"
            android:textColor="@color/green"
            app:backgroundTint="@color/dark_gray"
            app:icon="@drawable/icon_arrow_right_short"
            app:iconGravity="end"
            app:iconPadding="0dp"
            app:iconTint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/dark_gray" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>